--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bag"
-    tools:context=".MainActivity">
+    tools:context=".HomeActivity">
 
     <RelativeLayout
         android:layout_width="380dp"
@@ -39,15 +39,17 @@
             android:textAppearance="@style/selamat_dat" />
 
         <EditText
+            android:id="@+id/user"
             android:layout_width="250dp"
             android:layout_height="40dp"
-            android:hint="username"
-            android:paddingLeft="10dp"
-            android:background="@drawable/baguserpass"
+            android:layout_marginLeft="60dp"
             android:layout_marginTop="190dp"
-            android:layout_marginLeft="60dp"/>
+            android:background="@drawable/baguserpass"
+            android:hint="username"
+            android:paddingLeft="10dp" />
 
         <EditText
+            android:id="@+id/pass"
             android:layout_width="250dp"
             android:layout_height="40dp"
             android:hint="Password"
@@ -57,32 +59,20 @@
             android:layout_marginLeft="60dp"/>
 
         <Button
+            android:id="@+id/buttonlogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="120dp"
             android:layout_marginTop="320dp"
             android:background="@drawable/button"
             android:gravity="top"
-            android:textColor="@color/black"
-            android:paddingVertical="10dp"
             android:paddingHorizontal="50dp"
-            android:text="@string/masuk"/>
+            android:paddingVertical="10dp"
+            android:text="@string/masuk"
+            android:textColor="@color/black" />
 
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/text_home"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </RelativeLayout>
